--- a/ui/style.css
+++ b/ui/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 .canvas1{
-    /*width: 100%;*/
-    /*height: 100%;*/
+    width: 100%;
+    height: 100%;
     /*background: url("assets/img/evgeni-evgeniev-KAukBWGvPWQ-unsplash.jpg") no-repeat center center fixed;*/
     /*background: url("assets/img/matthew-pla-EtVyMCyJJfQ-unsplash.jpg") no-repeat center center fixed;*/
     /*background-size: cover;*/
